test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/valid/extra_credit/label_file_scope_var_same_name.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[32]:
  int
  identifier(x)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  =
  const int(10)
  ;
  goto
  identifier(x)
  ;
  return
  identifier(x)
  ;
  {
  extern
  int
  identifier(x)
  ;
  identifier(x)
  :
  return
  identifier(x)
  ;
  }
  }
