test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/invalid_types/non_constant_static_initializer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  int
  identifier(a)
  =
  const int(10)
  ;
  int
  identifier(b)
  =
  const int(1)
  +
  identifier(a)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(b)
  ;
  }
